[M] Fix demo bug

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -58,7 +58,7 @@
     </div>
     <h3>How?</h3>
     <p class="alert alert-info"><i class="icon-info-sign"></i> Remember that you can pass a variable containing an object to <code>ui-event</code></p>
-<pre class="prettyprint linenums" ng-non-bindable>
+<pre class="prettyprint">
 &lt;h4&gt;Click to add a marker!&lt;/h4&gt;
 &lt;p&gt;{{zoomMessage}}&lt;/p&gt;
 &lt;ul&gt;
