[FIX] Add magic cloak

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -18,7 +18,7 @@
 <!-- Le directive
 ================================================== -->
 
-<section id="map" ng-non-bindable ng-controller="MapCtrl">
+<section id="map" ng-non-bindable ng-controller="MapCtrl" ng-cloak>
     <div class="page-header">
         <h1>Google Maps</h1>
     </div>
