Travis commit : build 26

--- a/index.html
+++ b/index.html
@@ -129,8 +129,7 @@
             <!--Giving the div an id="map_canvas" fix problems with twitter bootstrap affecting
             google maps-->
             <div id="map_canvas" ui-map="myMap" class="span8 map"
-                 ui-map-promise="onGoogleReady.promise"
-                 ui-event="{'map-click': 'addMarker($event)', 'map-zoom_changed': 'setZoomMessage(myMap.getZoom())' }"
+                 ui-event="{'map-click': 'addMarker($event, $params)', 'map-zoom_changed': 'setZoomMessage(myMap.getZoom())' }"
                  ui-options="mapOptions">
             </div>
         </div>
@@ -161,7 +160,7 @@
 &lt;!-- Giving the div an id="map_canvas" fix problems with twitter bootstrap affecting
 google maps --&gt;
 &lt;div id=&quot;map_canvas&quot; ui-map=&quot;myMap&quot; class=&quot;map&quot;
-  ui-event=&quot;{&#x27;map-click&#x27;: &#x27;addMarker($event)&#x27;, &#x27;map-zoom_changed&#x27;: &#x27;setZoomMessage(myMap.getZoom())&#x27; }&quot;
+  ui-event=&quot;{&#x27;map-click&#x27;: &#x27;addMarker($event, $params)&#x27;, &#x27;map-zoom_changed&#x27;: &#x27;setZoomMessage(myMap.getZoom())&#x27; }&quot;
   ui-options=&quot;mapOptions&quot;&gt;
 &lt;/div&gt;
 
@@ -177,7 +176,7 @@ $scope.mapOptions = {
 $scope.addMarker = function($event) {
   $scope.myMarkers.push(new google.maps.Marker({
     map: $scope.myMap,
-    position: $event.latLng
+    position: $params[0].latLng
   }));
 };
 
@@ -242,10 +241,10 @@ angular.module('doc.ui-map', ['ui.map', 'prettifyDirective'])
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
 
-    $scope.addMarker = function ($event) {
+    $scope.addMarker = function ($event, $params) {
       $scope.myMarkers.push(new google.maps.Marker({
         map: $scope.myMap,
-        position: $event.latLng
+        position: $params[0].latLng
       }));
     };
 
