Travis commit : build 31

--- a/index.html
+++ b/index.html
@@ -219,10 +219,11 @@ $scope.setMarkerPosition = function(marker, lat, lng) {
 
   <script src="assets/vendor/angular.min.js"></script>
   <script src="core/prettifyDirective.js"></script>
+  <script src="core/plunker.js"></script>
 
-  <script src="https://rawgithub.com/angular-ui/ui-utils/master/modules/event/event.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initCall"></script>
-  <script src="build/ui-map.js"></script>
+  <script src="https://rawgithub.com/angular-ui/ui-utils/master/modules/event/event.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initCall" type="text/javascript" charset="utf-8"></script>
+  <script src="build/ui-map.js" type="text/javascript" charset="utf-8"></script>
 
   <script>
     function initCall() {
