--- a/index.html
+++ b/index.html
@@ -2,97 +2,103 @@
 <html>
 
 <head>
-    <meta charset=utf-8/>
-    <title>Angular UI ~ UI.Map Doc</title>
+  <meta charset="utf-8"/>
+  <title>Angular UI ~ UI.Map Doc</title>
 
-    <!-- Le css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="assets/css/prettify.css"/>
+  <!-- Le css -->
+  <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/prettify.css"/>
 
-    <link rel="stylesheet" type="text/css" href="assets/css/demos.css"/>
+      <link rel="stylesheet" type="text/css" href="demo/demo.css"/>
 
 
 </head>
 
 <body>
 
-  <!-- Le navbar
-  ================================================== -->
-  <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-          <div class="container">
-              <div class="dropdown pull-left">
-                  <a class="brand dropdown-toggle" role="button" data-toggle="dropdown" href="#">
-                      UI.Map
-                      <b class="caret"></b>
-                  </a>
-                  <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                      <li><a href="https://github.com/angular-ui/"><strong>Related Projects:</strong></a></li>
-                      <li class="divider"></li>
-                      <li><a href="http://angular-ui.github.io/">AngularUI</a></li>
-                      <li><a href="http://angular-ui.github.io/bootstrap/">UI Bootstrap</a></li>
-                      <li><a href="http://angular-ui.github.io/ng-grid/">Grid</a></li>
-                      <li><a href="https://github.com/angular-ui/AngularJs.tmbundle">AngularJS.tmbundle</a></li>
-                      <li><a href="http://angular-ui.github.io/ui-router/sample/">Router <span class="label label-success">New!</span></a></li>
-                  </ul>
-              </div>
-          </div>
+<!-- Le navbar
+================================================== -->
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <div class="dropdown pull-left">
+        <a class="brand dropdown-toggle" role="button" data-toggle="dropdown" href="#">
+          UI.Map
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+          <li><a href="https://github.com/angular-ui/"><strong>Related Projects:</strong></a></li>
+          <li class="divider"></li>
+          <li><a href="http://angular-ui.github.io/">AngularUI</a></li>
+          <li><a href="http://angular-ui.github.io/bootstrap/">UI Bootstrap</a></li>
+          <li><a href="http://angular-ui.github.io/ng-grid/">Grid</a></li>
+          <li><a href="https://github.com/angular-ui/AngularJs.tmbundle">AngularJS.tmbundle</a></li>
+          <li><a href="http://angular-ui.github.io/ui-router/sample/">Router</a></li>
+        </ul>
       </div>
+    </div>
   </div>
-  <div style="margin: 32px;"></div>
+</div>
+<div style="margin: 20px;"></div>
 
-  <!-- Le header
-  ================================================== -->
-  <header class="hero-unit" id="overview">
-      <div class="container">
-
-          <h1>UI.Map</h1>
-
-          <p>This directive allows you to add map elements.</p>
-
-          <p class="btn-group">
-              <a class="btn" href="https://github.com/angular-ui/ui-map"><i class="icon-github"></i> Code on Github</a>
-              <a class="btn btn-primary" href="https://github.com/angular-ui/ui-map/tree/gh-pages/build">
-                  <i class="icon-download-alt icon-white"></i> Download <small>(0.0.3)</small>
-              </a>
-          </p>
-      </div>
-      <div class="bs-docs-social">
-          <div class="container">
-              <ul class="bs-docs-social-buttons">
-                  <li>
-                      <iframe src="http://ghbtns.com/github-btn.html?user=angular-ui&amp;repo=ui-map&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-                  </li>
-                  <li>
-                      <iframe src="http://ghbtns.com/github-btn.html?user=angular-ui&amp;repo=ui-map&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
-                  </li>
-                  <li>
-                      <!-- Place this tag where you want the +1 button to render. -->
-                      <div class="g-plusone" data-size="medium"></div>
-
-                      <!-- Place this tag after the last +1 button tag. -->
-                      <script type="text/javascript">
-                          (function () {
-                              var po = document.createElement('script');
-                              po.type = 'text/javascript';
-                              po.async = true;
-                              po.src = 'https://apis.google.com/js/plusone.js';
-                              var s = document.getElementsByTagName('script')[0];
-                              s.parentNode.insertBefore(po, s);
-                          })();
-                      </script>
-                  </li>
-              </ul>
-          </div>
-      </div>
-  </header>
-
-  <!-- Le main
-  ================================================== -->
+<!-- Le header
+================================================== -->
+<header class="hero-unit" id="overview">
   <div class="container">
 
-    
+    <h1>UI.Map</h1>
+
+    <p>This directive allows you to add map elements.</p>
+
+    <p class="btn-group">
+      <a class="btn" href="https://github.com/angular-ui/ui-map"><i
+        class="icon-github"></i> Code on Github</a>
+      <a class="btn btn-primary" href="https://github.com/angular-ui/ui-map/tree/gh-pages/build">
+        <i class="icon-download-alt icon-white"></i> Download
+        <small>(0.0.3)</small>
+      </a>
+    </p>
+  </div>
+  <div class="bs-docs-social">
+    <div class="container">
+      <ul class="bs-docs-social-buttons">
+        <li>
+          <iframe
+            src="http://ghbtns.com/github-btn.html?user=angular-ui&amp;repo=ui-map&amp;type=watch&amp;count=true"
+            allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+        </li>
+        <li>
+          <iframe
+            src="http://ghbtns.com/github-btn.html?user=angular-ui&amp;repo=ui-map&amp;type=fork&amp;count=true"
+            allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
+        </li>
+        <li>
+          <!-- Place this tag where you want the +1 button to render. -->
+          <div class="g-plusone" data-size="medium"></div>
+
+          <!-- Place this tag after the last +1 button tag. -->
+          <script type="text/javascript">
+            (function () {
+              var po = document.createElement('script');
+              po.type = 'text/javascript';
+              po.async = true;
+              po.src = 'https://apis.google.com/js/plusone.js';
+              var s = document.getElementsByTagName('script')[0];
+              s.parentNode.insertBefore(po, s);
+            })();
+          </script>
+        </li>
+      </ul>
+    </div>
+  </div>
+</header>
+
+<!-- Le main
+================================================== -->
+<div class="container">
+
+  
 <!-- Le directive
 ================================================== -->
 
@@ -207,28 +213,33 @@ $scope.setMarkerPosition = function(marker, lat, lng) {
 </section>
 
 
-  </div>
+</div>
 
-  <!-- Le javascript
-  ================================================== -->
+<!-- Le javascript
+================================================== -->
 
-  <script src="assets/vendor/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap.min.js"></script>
+<script src="assets/vendor/jquery.min.js"></script>
+<script src="assets/vendor/bootstrap.min.js"></script>
 
-  <script src="assets/vendor/prettify.js"></script>
+<script src="assets/vendor/prettify.js"></script>
 
-  <script src="assets/vendor/angular.min.js"></script>
-  <script src="core/prettifyDirective.js"></script>
-  <script src="core/plunker.js"></script>
+<script src="assets/vendor/angular.min.js"></script>
+<script src="core/prettifyDirective.js"></script>
+<script src="core/plunker.js"></script>
 
-  <script src="https://rawgithub.com/angular-ui/ui-utils/master/modules/event/event.js" type="text/javascript" charset="utf-8"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initCall" type="text/javascript" charset="utf-8"></script>
-  <script src="build/ui-map.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://rawgithub.com/angular-ui/ui-utils/master/modules/event/event.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&callback=initCall" type="text/javascript" charset="utf-8"></script>
+<script src="dist/ui-map.min.js" type="text/javascript" charset="utf-8"></script>
 
-  <script>
-    function initCall() {
-  console.log("Google maps api initialized.");
-  angular.bootstrap(document.getElementById("map"), ['doc.ui-map']);
+
+<script>
+  /* global console:false, google:false */
+/*jshint unused:false */
+'use strict';
+
+function initCall() {
+  console.log('Google maps api initialized.');
+  angular.bootstrap(document.getElementById('map'), ['doc.ui-map']);
 }
 
 angular.module('doc.ui-map', ['ui.map', 'prettifyDirective'])
@@ -266,7 +277,7 @@ angular.module('doc.ui-map', ['ui.map', 'prettifyDirective'])
     };
   }])
 ;
-  </script>
+</script>
 
 </body>
 
