--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,47 +1,53 @@
 <!-- Le directive
 ================================================== -->
 
-<section id="map" ng-controller="MapCtrl" ng-cloak>
-    <div class="page-header">
-        <h1>Google Maps</h1>
-    </div>
-    <div class="well">
-        <div class="row">
-            <div class="span3">
-                <h4>Click to add a marker!</h4>
-                <p>{{zoomMessage}}</p>
-                <ul>
-                    <li ng-repeat="marker in myMarkers">
-                        <a class="btn" ng-click="myMap.panTo(marker.getPosition())">
-                            Pan to Marker {{$index}}
-                        </a>
-                    </li>
-                </ul>
+<section id="map" ng-cloak>
+  <div class="page-header">
+    <h1>Google Maps</h1>
+  </div>
+  <div class="well"  ng-controller="MapCtrl">
+    <div class="row">
+      <div class="col-md-3">
+        <h4>Click to add a marker!</h4>
+        <p>{{zoomMessage}}</p>
+        <ul class="list-unstyled">
+          <li ng-repeat="marker in myMarkers">
+            <a class="btn btn-default" ng-click="myMap.panTo(marker.getPosition())">
+              Pan to Marker {{$index}}
+            </a>
+          </li>
+        </ul>
 
-                <!-- this is the confusing part. we have to point the map marker directive
-                    at an existing google.maps.Marker object, so it can hook up events -->
-                <div ng-repeat="marker in myMarkers" ui-map-marker="myMarkers[$index]"
-                     ui-event="{'map-click': 'openMarkerInfo(marker)'}">
-                </div>
-
-                <div ui-map-info-window="myInfoWindow">
-                    <h1>Marker</h1>
-                    Lat: <input ng-model="currentMarkerLat">, Lng: <input ng-model="currentMarkerLng">
-                    <a class="btn btn-primary" ng-click="setMarkerPosition(currentMarker, currentMarkerLat, currentMarkerLng)">Set Position</a>
-                </div>
-            </div>
-
-            <!--Giving the div an id="map_canvas" fix problems with twitter bootstrap affecting
-            google maps-->
-            <div id="map_canvas" ui-map="myMap" class="span8 map"
-                 ui-event="{'map-click': 'addMarker($event, $params)', 'map-zoom_changed': 'setZoomMessage(myMap.getZoom())' }"
-                 ui-options="mapOptions">
-            </div>
+        <!-- this is the confusing part. we have to point the map marker directive
+            at an existing google.maps.Marker object, so it can hook up events -->
+        <div ng-repeat="marker in myMarkers" ui-map-marker="myMarkers[$index]"
+             ui-event="{'map-click': 'openMarkerInfo(marker)'}">
         </div>
+
+        <div ui-map-info-window="myInfoWindow">
+          <h1>Marker</h1>
+          Lat: <input ng-model="currentMarkerLat">, Lng: <input ng-model="currentMarkerLng">
+          <a class="btn btn-primary" ng-click="setMarkerPosition(currentMarker, currentMarkerLat, currentMarkerLng)">Set Position</a>
+        </div>
+      </div>
+
+      <!--Giving the div an id="map_canvas" fix problems with twitter bootstrap affecting
+      google maps-->
+      <div id="map_canvas" ui-map="myMap" class="col-md-8 map"
+           ui-event="{'map-click': 'addMarker($event, $params)', 'map-zoom_changed': 'setZoomMessage(myMap.getZoom())' }"
+           ui-options="mapOptions">
+      </div>
     </div>
+  </div>
     <h3>How?</h3>
-    <p class="alert alert-info"><i class="icon-info-sign"></i> Remember that you can pass a variable containing an object to <code>ui-event</code></p>
-<pre class="prettyprint">
+
+
+    <div >
+
+      <tabset>
+        <tab heading="Markup">
+          <div plunker-content="markup">
+<pre class="prettyprint">&lt;section id="map"&gt;
 &lt;h4&gt;Click to add a marker!&lt;/h4&gt;
 &lt;p&gt;{{zoomMessage}}&lt;/p&gt;
 &lt;ul&gt;
@@ -68,8 +74,29 @@ google maps --&gt;
   ui-event=&quot;{&#x27;map-click&#x27;: &#x27;addMarker($event, $params)&#x27;, &#x27;map-zoom_changed&#x27;: &#x27;setZoomMessage(myMap.getZoom())&#x27; }&quot;
   ui-options=&quot;mapOptions&quot;&gt;
 &lt;/div&gt;
+&lt;/section&gt;</pre>
+    <div style="margin-top: 200px;"></div>
+            </div>
+          </tab>
+          <tab heading="CSS">
+          <div plunker-content="css">
+  <pre class="prettyprint">.map {
+  height: 400px;
+  width: 600px;
+  margin: auto;
+}</pre>
+    <div style="margin-top: 600px;"></div>
+          </div>
+        </tab>
+          <tab heading="JavaScript">
+        <div plunker-content="javascript">
+<pre class="prettyprint">function initCall() {
+  console.log('Google maps api initialized.');
+  angular.bootstrap(document.getElementById('map'), ['doc.ui-map']);
+}
 
-&lt;script&gt;
+app.controller(&#39;MapCtrl&#39;, [&#39;$scope&#39;, function($scope) {
+
 $scope.myMarkers = [];
 
 $scope.mapOptions = {
@@ -100,13 +127,11 @@ $scope.openMarkerInfo = function(marker) {
 $scope.setMarkerPosition = function(marker, lat, lng) {
   marker.setPosition(new google.maps.LatLng(lat, lng));
 };
-&lt;/script&gt;
+}]);</pre>
+        </div>
+      </tab>
+        </tabset>
+      </div>
+    <p class="alert alert-info"><i class="icon-info-sign"></i> Remember that you can pass a variable containing an object to <code>ui-event</code></p>
 
-&lt;style&gt;
-.map {
-  height: 400px;
-  width: 600px;
-}
-&lt;/style&gt;
-</pre>
 </section>
