Added callback functionality for ui-map.
Added the possibility to call an arbitrary scope function after having compiled the ui-map directive. This can e.g. be used to additionally modify or work with the map from within the controller after it has been created. The callback gets the map object as its first parameter.

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -35,7 +35,7 @@
       google maps-->
       <div id="map_canvas" ui-map="myMap" class="col-md-8 map"
            ui-event="{'map-click': 'addMarker($event, $params)', 'map-zoom_changed': 'setZoomMessage(myMap.getZoom())' }"
-           ui-options="mapOptions">
+           ui-options="mapOptions" ui-on-finish="myCallback">
       </div>
     </div>
   </div>
